# eidoplot

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  generate_gallery.sh  rich.txt  run_all_examples.sh  sim.m
.github/workflows/: test.yml
base/: Cargo.toml
base/src/: color.rs  geom.rs
base/src/color/: named.rs
dsl/: Cargo.toml  eplt-grammar.ebnf
dsl/src/: ast.rs  diag.rs  input.rs  lib.rs
eidoplot/: Cargo.toml
eidoplot-base/src/: lib.rs
eidoplot-color/: Cargo.toml
eidoplot-color/src/: lib.rs  named.rs
eidoplot-dsl/: Cargo.toml  eplt-grammar.ebnf
eidoplot-dsl/src/: ast.rs  diag.rs  input.rs  lex.rs  lib.rs  parse.rs
eidoplot-pxl/: Cargo.toml
eidoplot-pxl/src/: font.rs  lib.rs
eidoplot-svg/: Cargo.toml
eidoplot-svg/src/: lib.rs
eidoplot-text/: Cargo.toml
eidoplot-text/examples/: bidi_layout.rs  line_text.rs  rich_text.rs  shape.rs  text_line.rs  text_rich.rs  text_rich_parse.rs
eidoplot-text/src/: bidi.rs  font.rs  fontdb.rs  fontlib.rs  layout.rs  lib.rs  line.rs  math.rs  render.rs  render2.rs  rich.rs  shape.rs  shape2.rs  style.rs
eidoplot-text/src/math/: ast.rs  lex.rs  parse.rs
eidoplot-text/src/rich/: boundaries.rs  builder.rs  parse.rs  render.rs
eidoplot-utils/: Cargo.toml
eidoplot-utils/src/: lib.rs
eidoplot/examples/: bars.rs  bitcoin.rs  bode-rlc.eplt  bode_rlc.rs  bode_rlc_eplt.rs  bouncing_ball.rs  cat.rs  gauss.rs  iris.eplt  iris.rs  iris_eplt.rs  iris_polars.rs  multiple_axes.rs  multiple_axes_eplt.rs  polars.rs  polars_iris.rs  polars_sine.rs  rlc-bode.eplt  rlc_bode.rs  sine.rs  subplots.eplt  subplots.rs  subplots_eplt.rs  time_series.rs
eidoplot/examples/common/: mod.rs
eidoplot/src/: axis.rs  backend.rs  data.rs  drawing.rs  eplt.rs  fdb.rs  figure.rs  font.rs  geom.rs  ir.rs  lib.rs  missing_config.rs  missing_params.rs  parse.rs  plots.rs  prelude.rs  render.rs  style.rs  text.rs  time.rs
eidoplot/src/axis/: scale.rs  tick.rs
eidoplot/src/data/: polars.rs
eidoplot/src/drawing/: axis.rs  ctx.rs  fdb.rs  figure.rs  legend.rs  marker.rs  plot.rs  scale.rs  series.rs  ticks.rs
eidoplot/src/drawing/axis/: bounds.rs  side.rs
eidoplot/src/drawing/plot/: grid_idx.rs
eidoplot/src/ir/: axis.rs  figure.rs  legend.rs  plot.rs  series.rs  text.rs
eidoplot/src/style/: catppuccin.rs  color.rs  defaults.rs  font.rs  palette.rs  series.rs  theme.rs
eidoplot/src/style/color/: css.rs  named.rs
examples/: bars.rs  bitcoin.rs  bode-rlc.eplt  bode_rlc.rs  bode_rlc_dsl.rs  bode_rlc_eplt.rs  bouncing_ball.rs  gauss.rs  iris.eplt  iris.rs  iris_dsl.rs  iris_eplt.rs  multiple_axes.eplt  multiple_axes.rs  multiple_axes_dsl.rs  multiple_axes_eplt.rs  polars_iris.rs  polars_sine.rs  readme.rs  sine.rs  subplots.rs  subplots_dsl.rs  subplots_eplt.rs
examples/common/: mod.rs
iced/: Cargo.toml
iced/examples/: audio_scope.rs  scope.rs  show_fig.rs
iced/src/: figure.rs  lib.rs  show.rs  surface.rs  toolbar.rs
pxl/: Cargo.toml
pxl/src/: lib.rs
share/: .gitignore
src/: data.rs  des.rs  drawing.rs  dsl.rs  eplt.rs  ir.rs  lib.rs  render.rs  style.rs  time.rs
src/data/: csv.rs  polars.rs
src/des/: annot.rs  axis.rs  figure.rs  legend.rs  plot.rs  series.rs
src/drawing/: annot.rs  axis.rs  figure.rs  hit_test.rs  legend.rs  marker.rs  plot.rs  scale.rs  series.rs  ticks.rs  zoom.rs
src/drawing/axis/: bounds.rs  side.rs
src/ir/: annot.rs  axis.rs  figure.rs  legend.rs  plot.rs  series.rs
src/style/: catppuccin.rs  defaults.rs  series.rs  theme.rs
svg/: Cargo.toml
svg/src/: lib.rs
tests/: .gitignore  Cargo.toml
tests/refs/: .gitignore
tests/src/: harness.rs  lib.rs  pixelmatch.rs  tests.rs
tests/src/tests/: axes.rs  interp.rs  legend.rs  subplots.rs
text/: Cargo.toml
text/examples/: text_line.rs  text_rich.rs  text_rich_parse.rs
text/src/: bidi.rs  font.rs  fontdb.rs  input.rs  lib.rs  line.rs  math.rs  rich.rs
text/src/rich/: builder.rs  parse.rs  render.rs
