[package]
name = "eidoplot"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
eidoplot-base.workspace = true
eidoplot-text.workspace = true
rustybuzz.workspace = true
ttf-parser.workspace = true
# feature eplt
eidoplot-dsl = { workspace = true, optional = true }
# feature data-polars
polars = { workspace = true, optional = true }

[dev-dependencies]
eidoplot-svg.workspace = true
eidoplot-pxl.workspace = true
iced-oplot.workspace = true
rand = "0.9.2"
rand_distr = "0.5.1"
rand_chacha = "0.9.0"
ode_solvers = "0.6.1"

[features]
default = ["data-csv", "noto-sans", "utils"]
data-csv = []
data-polars = ["dep:polars"]
eplt = ["eidoplot-dsl/diag"]
noto-mono = ["eidoplot-text/noto-mono"]
noto-sans = ["eidoplot-text/noto-sans"]
noto-sans-italic = ["eidoplot-text/noto-sans-italic"]
noto-serif = ["eidoplot-text/noto-serif"]
noto-serif-italic = ["eidoplot-text/noto-serif-italic"]
utils = []

[[example]]
name = "bars"

[[example]]
name = "bitcoin"
required-features = ["data-csv"]

[[example]]
name = "bode_rlc"
required-features = ["noto-serif-italic"]

[[example]]
name = "bode_rlc_eplt"
required-features = ["eplt", "noto-serif-italic"]

[[example]]
name = "bouncing_ball"

[[example]]
name = "gauss"

[[example]]
name = "iris"
required-features = ["data-csv"]

[[example]]
name = "iris_eplt"
required-features = ["data-csv", "eplt"]

[[example]]
name = "multiple_axes"

[[example]]
name = "multiple_axes_eplt"
required-features = ["eplt"]

[[example]]
name = "polars_iris"
required-features = ["data-polars"]

[[example]]
name = "polars_sine"
required-features = ["data-polars"]

[[example]]
name = "sine"

[[example]]
name = "subplots"

[[example]]
name = "subplots_eplt"
required-features = ["eplt"]

[workspace]
members = ["base", "dsl", "iced", "pxl", "svg", "text", "tests"]
resolver = "3"

[workspace.package]
version = "0.1.0-dev"
authors = ["Rémi THEBAULT"]
edition = "2024"
repository = "https://github.com/rtbo/eidoplot"
license = "MIT"
categories = ["science", "graphics"]
keywords = ["data", "visualization", "plotting"]

[workspace.dependencies]
eidoplot = { version = "0.1.0-dev", path = "." }
eidoplot-base = { version = "0.1.0-dev", path = "base" }
eidoplot-dsl = { version = "0.1.0-dev", path = "dsl" }
eidoplot-pxl = { version = "0.1.0-dev", path = "pxl" }
eidoplot-svg = { version = "0.1.0-dev", path = "svg" }
eidoplot-text = { version = "0.1.0-dev", path = "text" }
iced-oplot = { version = "0.1.0-dev", path = "iced" }
bytes = "1.6"
iced = { version = "0.14.0", features = [
    "advanced",
    "canvas",
    "image",
    "tokio",
] }
log = "0.4"
miette = "7.6.0"
polars = { version = "0.50.0", features = ["lazy"] }
rustybuzz = "0.20.1"
tiny-skia = "0.11.4"
tiny-skia-path = "0.11.4"
strict-num = "0.2.0"

[workspace.dependencies.ttf-parser]
version = "0.25.1"
default-features = false
features = [
    "opentype-layout",
    "apple-layout",
    "variable-fonts",
    "glyph-names",
    "no-std-float",
]
