[package]
name = "plotive"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
plotive-base.workspace = true
plotive-text.workspace = true
rustybuzz.workspace = true
ttf-parser.workspace = true
# feature dsl
plotive-dsl = { workspace = true, optional = true }
# feature data-polars
polars = { workspace = true, optional = true }

[dev-dependencies]
plotive-iced = { workspace = true, features = ["clipboard"] }
plotive-svg.workspace = true
plotive-pxl.workspace = true
rand = "0.9.2"
rand_distr = "0.5.1"
rand_chacha = "0.9.0"
ode_solvers = "0.6.1"

[features]
default = ["noto-sans"]

data-csv = []
data-polars = ["dep:polars"]
dsl = ["plotive-dsl/diag"]
noto-mono = ["plotive-text/noto-mono"]
noto-sans = ["plotive-text/noto-sans"]
noto-sans-italic = ["plotive-text/noto-sans-italic"]
noto-serif = ["plotive-text/noto-serif"]
noto-serif-italic = ["plotive-text/noto-serif-italic"]
time = []
utils = []

[[example]]
name = "bars"

[[example]]
name = "bitcoin"
required-features = ["data-csv", "time"]

[[example]]
name = "bode_rlc"
required-features = ["noto-serif-italic", "utils"]

[[example]]
name = "bode_rlc_dsl"
required-features = ["dsl", "noto-serif-italic", "utils"]

[[example]]
name = "bouncing_ball"
required-features = ["time"]

[[example]]
name = "gauss"

[[example]]
name = "iris"
required-features = ["data-csv"]

[[example]]
name = "iris_dsl"
required-features = ["data-csv", "dsl"]

[[example]]
name = "multiple_axes"
required-features = ["utils"]

[[example]]
name = "multiple_axes_dsl"
required-features = ["dsl", "utils"]

[[example]]
name = "polars_iris"
required-features = ["data-polars"]

[[example]]
name = "polars_sine"
required-features = ["data-polars"]

[[example]]
name = "readme"

[[example]]
name = "sine"

[[example]]
name = "subplots"
required-features = ["utils"]

[[example]]
name = "subplots_dsl"
required-features = ["dsl", "utils"]

[workspace]
members = ["base", "dsl", "iced", "pxl", "svg", "text", "tests"]
resolver = "3"

[workspace.package]
version = "0.1.0-dev"
authors = ["Rémi THEBAULT"]
edition = "2024"
repository = "https://github.com/rtbo/plotive"
license = "MIT"
categories = ["science", "graphics"]
keywords = ["data", "visualization", "plotting"]

[workspace.dependencies]
plotive = { version = "0.1.0-dev", path = "." }
plotive-base = { version = "0.1.0-dev", path = "base" }
plotive-dsl = { version = "0.1.0-dev", path = "dsl" }
plotive-iced = { version = "0.1.0-dev", path = "iced" }
plotive-pxl = { version = "0.1.0-dev", path = "pxl" }
plotive-svg = { version = "0.1.0-dev", path = "svg" }
plotive-text = { version = "0.1.0-dev", path = "text" }
arboard = "3.6.1"
bytes = "1.6"
iced = { version = "0.14.0", features = [
    "advanced",
    "canvas",
    "image",
    "tokio",
] }
iced_font_awesome = "0.4.0"
log = "0.4"
miette = { version = "7.6.0", features = ["fancy"] }
polars = { version = "0.50.0", features = ["lazy"] }
rfd = "0.16.0"
rustybuzz = "0.20.1"
tiny-skia = "0.11.4"
tiny-skia-path = "0.11.4"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "time"] }
strict-num = "0.2.0"

[workspace.dependencies.ttf-parser]
version = "0.25.1"
default-features = false
features = [
    "opentype-layout",
    "apple-layout",
    "variable-fonts",
    "glyph-names",
    "no-std-float",
]
