[package]
name = "plotive-base"
description = "Base library for plotive"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
tiny-skia-path.workspace = true
strict-num.workspace = true
