[package]
name = "eidoplot-pxl"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
eidoplot = { path = "../eidoplot" }
eidoplot-text = { path = "../eidoplot-text" }
fontdb.workspace = true
rustybuzz.workspace = true
tiny-skia.workspace = true
tiny-skia-path.workspace = true
ttf-parser.workspace = true
