[package]
name = "eidoplot-text"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
fontdb.workspace = true
rustybuzz.workspace = true
tiny-skia.workspace = true
tiny-skia-path.workspace = true
ttf-parser.workspace = true
unicode-bidi = "0.3.18"

[[example]]
name="bidi_layout"
