[package]
name = "eidoplot"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
eidoplot-text = { path = "../eidoplot-text" }
rustybuzz.workspace = true
ttf-parser.workspace = true
tiny-skia-path.workspace = true
polars = { version = "0.50.0", features = ["lazy"], optional = true }

[dev-dependencies]
eidoplot-svg = { path = "../eidoplot-svg" }
eidoplot-pxl = { path = "../eidoplot-pxl" }
eidoplot-utils = { path = "../eidoplot-utils" }
rand = "0.9.2"
rand_distr = "0.5.1"
rand_chacha = "0.9.0"

[features]
polars = ["dep:polars"]

[[example]]
name="sine"

[[example]]
name="gauss"

[[example]]
name="polars"
required-features = ["polars"]

[[example]]
name="iris"
required-features = ["polars"]

[[example]]
name="cat"
