[package]
name = "eidoplot"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
eidoplot-dsl = { path = "../eidoplot-dsl" }
eidoplot-text = { path = "../eidoplot-text" }
rustybuzz.workspace = true
ttf-parser.workspace = true
tiny-skia-path.workspace = true
miette = { workspace = true, optional = true }
polars = { version = "0.50.0", features = ["lazy"], optional = true }

[dev-dependencies]
eidoplot-svg = { path = "../eidoplot-svg" }
eidoplot-pxl = { path = "../eidoplot-pxl" }
eidoplot-utils = { path = "../eidoplot-utils" }
miette = { workspace = true, features = ["fancy-no-backtrace"] }
rand = "0.9.2"
rand_distr = "0.5.1"
rand_chacha = "0.9.0"

[features]
polars = ["dep:polars"]
dsl-diag = ["dep:miette", "eidoplot-dsl/diag"]

[[example]]
name = "sine"

[[example]]
name = "gauss"

[[example]]
name = "iris"

[[example]]
name = "iris_eplt"
required-features = ["dsl-diag"]

[[example]]
name = "bars"

[[example]]
name = "polars_sine"
required-features = ["polars"]

[[example]]
name = "polars_iris"
required-features = ["polars"]
