[package]
name = "eidoplot"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
eidoplot-base.workspace = true
eidoplot-dsl.workspace = true
eidoplot-text.workspace = true
rustybuzz.workspace = true
ttf-parser.workspace = true
miette = { workspace = true, optional = true }
polars = { version = "0.50.0", features = ["lazy"], optional = true }

[dev-dependencies]
eidoplot-svg.workspace = true
eidoplot-pxl.workspace = true
miette = { workspace = true, features = ["fancy-no-backtrace"] }
rand = "0.9.2"
rand_distr = "0.5.1"
rand_chacha = "0.9.0"
ode_solvers = "0.6.1"

[features]
default = ["data-csv", "utils"]
data-csv = []
data-polars = ["dep:polars"]
dsl-diag = ["dep:miette", "eidoplot-dsl/diag"]
utils = []

[[example]]
name = "bars"

[[example]]
name = "bitcoin"
required-features = ["data-csv"]

[[example]]
name = "bode_rlc"

[[example]]
name = "bode_rlc_eplt"
required-features = ["dsl-diag"]

[[example]]
name = "bouncing_ball"

[[example]]
name = "gauss"

[[example]]
name = "iris"
required-features = ["data-csv"]

[[example]]
name = "iris_eplt"
required-features = ["dsl-diag", "data-csv"]

[[example]]
name = "multiple_axes"

[[example]]
name = "multiple_axes_eplt"
required-features = ["dsl-diag"]

[[example]]
name = "polars_iris"
required-features = ["data-polars"]

[[example]]
name = "polars_sine"
required-features = ["data-polars"]

[[example]]
name = "sine"

[[example]]
name = "subplots"

[[example]]
name = "subplots_eplt"
required-features = ["dsl-diag"]
