[package]
name = "iced-oplot"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
eidoplot.workspace = true
eidoplot-pxl.workspace = true
eidoplot-svg.workspace = true
bytes.workspace = true
iced.workspace = true
iced_font_awesome.workspace = true
rfd.workspace = true
arboard = { workspace = true, optional = true }

[[example]]
name = "scope"

[[example]]
name = "audio_scope"

[dev-dependencies]
eidoplot = { workspace = true, features = ["utils"] }
cpal = "0.16.0"
rustfft = "6.4.1"

[features]
default = ["noto-sans"]
clipboard = ["dep:arboard"]
noto-sans = ["eidoplot/noto-sans"]
noto-sans-italic = ["eidoplot/noto-sans-italic"]
noto-serif = ["eidoplot/noto-serif"]
noto-serif-italic = ["eidoplot/noto-serif-italic"]
noto-mono = ["eidoplot/noto-mono"]
