[package]
name = "plotive-iced"
description = "Iced integration library for plotive"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
plotive.workspace = true
plotive-pxl.workspace = true
plotive-svg.workspace = true
bytes.workspace = true
iced.workspace = true
iced_font_awesome.workspace = true
rfd.workspace = true
arboard = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[[example]]
name = "scope"

[[example]]
name = "audio_scope"

[dev-dependencies]
plotive = { workspace = true, features = ["utils"] }
cpal = "0.16.0"
rustfft = "6.4.1"

[features]
clipboard = ["dep:arboard", "dep:tokio"]
# Some optional features re-exported from plotive
data-csv = ["plotive/data-csv"]
