[package]
name = "eidoplot-pxl"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
eidoplot.workspace = true
eidoplot-text.workspace = true
rustybuzz.workspace = true
tiny-skia.workspace = true
tiny-skia-path.workspace = true
ttf-parser.workspace = true

[features]
debug-text-bbox = []
