[package]
name = "eidoplot-svg"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
eidoplot.workspace = true
eidoplot-text.workspace = true
rustybuzz.workspace = true
svg = "0.18.0"
