[package]
name = "eidoplot-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false

[dependencies]
eidoplot.workspace = true
eidoplot-pxl.workspace = true
eidoplot-svg.workspace = true
tiny-skia.workspace = true
similar = "2.7.0"

[features]
regenerate-refs = []
