[package]
name = "plotive-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false

[dependencies]
plotive.workspace = true
plotive-pxl.workspace = true
plotive-svg.workspace = true
tiny-skia.workspace = true
similar = "2.7.0"
