[package]
name = "eidoplot-text"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
eidoplot-base.workspace = true
rustybuzz.workspace = true
tiny-skia.workspace = true
tiny-skia-path.workspace = true
ttf-parser.workspace = true
unicode-bidi = "0.3.18"
log.workspace = true
memmap2 = { version = "0.9", optional = true }
slotmap = { version = "1.0.6", default-features = false }
tinyvec = { version = "1.6.0", features = ["alloc"] }

[target.'cfg(all(unix, not(any(target_os = "macos", target_os = "android"))))'.dependencies]
fontconfig-parser = { version = "0.5", optional = true, default-features = false }

[features]
default = ["std", "fs", "memmap", "fontconfig"]
std = ["ttf-parser/std"]
# Allows local filesystem interactions.
fs = ["std"]
# Allows font files memory mapping, greatly improves performance.
memmap = ["fs", "memmap2"]
# Enables minimal fontconfig support on Linux.
# Must be enabled for NixOS, otherwise no fonts will be loaded.
fontconfig = ["fontconfig-parser", "fs"]

[[example]]
name="text_line"

[[example]]
name="text_rich"

[[example]]
name="text_rich_parse"
